# ArduinoCloudThing

./: .gitignore  .travis.yml  README.md  keywords.txt  library.properties
examples/: shadow_thing_sync_callbacks.ino  thingProperties.h
examples/SimpleCloudButtonExpandedNewAPI/: SimpleCloudButtonExpandedNewAPI.ino  arduino_secrets.h
extras/: codespell-ignore-words-list.txt
src/: ArduinoCloudProperty.cpp  ArduinoCloudProperty.h  ArduinoCloudProperty.hpp  ArduinoCloudProperty.ipp  ArduinoCloudPropertyContainer.cpp  ArduinoCloudPropertyContainer.hpp  ArduinoCloudPropertyContainer.ipp  ArduinoCloudPropertyGeneric.h  ArduinoCloudStringProperty.cpp  ArduinoCloudStringProperty.h  ArduinoCloudThing.cpp  ArduinoCloudThing.h
src/lib/ArduinoCbor/src/: ArduinoCbor.h  CborBuffer.cpp  CborObject.cpp  CborObject.h  CborVariant.cpp  CborVariant.h
src/lib/ArduinoCbor/src/cn-cbor/: cn-cbor.c  cn-cbor.h  cn-create.c  cn-encoder.c
src/lib/CBOR/: cbor-lib.h
src/lib/CBOR/src/: open_memstream.c
src/types/: CloudColor.h  CloudLocation.h
src/types/automation/: CloudDimmeredLight.h
test/: CMakeLists.txt  build.sh  main.cpp
test/ArduinoCloudThing_test/: ArduinoCloudThing_test.ino
test/include/: Arduino.h  TestUtil.h
test/src/: Arduino.cpp  TestUtil.cpp  main.cpp  test_CloudColor.cpp  test_addPropertyReal.cpp  test_callback.cpp  test_decode.cpp  test_encode.cpp  test_getLastValues.cpp  test_publishEvery.cpp  test_publishOnChange.cpp  test_publishOnChangeRateLimit.cpp  test_readOnly.cpp  test_writeOnly.cpp
